[project]
name = "dora-gazebo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dora-rs",
]

[project.scripts]
dora-gazebo = "dora_gazebo.main:main"

[tool.uv.sources]
dora-rs = { path = "../dora-repo/apis/python/node" }

[tool.uv.workspace]
members = [
    "examples/dora-gazebo-controller",
]
